--- a/src/app/dashboard.component.html
+++ b/src/app/dashboard.component.html
@@ -1,5 +1,5 @@
 <h3>Top Heroes</h3>
-<h3>Carmine test</h3>
+<h3 style="color: red;">Carmine test</h3>
 <div class="grid grid-pad">
   <div *ngFor="let hero of heroes" (click)="gotoDetail(hero)" class="col-1-4">
     <div class="module hero">
